Fixed wrong padding in account entries

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,7 +15,7 @@
 	font-size: xx-small;
 }
 
-.profile-entry {
+.account-entry {
 	padding: 4px 20px;
 }
 
